syntax = "proto3";

package Throneteki.WebService;

import "Messages.proto";

service ThronetekiService {
	rpc AddLobbyMessage(AddLobbyMessageRequest) returns (AddLobbyMessageResponse);
	rpc CreateGame(CreateGameRequest) returns (CreateGameResponse);
	rpc GetAllPacks(GetAllPacksRequest) returns (GetAllPacksResponse);
	rpc GetDeckById(GetDeckByIdRequest) returns (GetDeckByIdResponse);
	rpc GetLobbyMessagesForUser(GetLobbyMessagesForUserRequest) returns (GetLobbyMessagesForUserResponse);
	rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
	rpc RemoveLobbyMessage(RemoveLobbyMessageRequest) returns (RemoveLobbyMessageResponse);
	rpc UpdateGame(UpdateGameRequest) returns (UpdateGameResponse);
}

message AddLobbyMessageRequest {
	string Message = 1;
	string UserId = 2;
}

message AddLobbyMessageResponse {
	LobbyMessage Message = 1;
}

message CreateGameRequest {
	ThronetekiGame Game = 1;
}

message CreateGameResponse {
}

message GetAllPacksRequest {
}

message GetAllPacksResponse {
	repeated Pack Packs = 1;
}

message GetDeckByIdRequest {
	int32 DeckId = 1;
}

message GetDeckByIdResponse {
	Deck Deck = 1;
}

message GetLobbyMessagesForUserRequest {
	string UserId = 1;
}

message GetLobbyMessagesForUserResponse {
	repeated LobbyMessage Messages = 1;
}

message GetUserByUsernameRequest {
	string Username = 1;
}

message GetUserByUsernameResponse {
	ThronetekiUser User = 1;
}

message UpdateGameRequest {
	ThronetekiGame Game = 1;
}

message UpdateGameResponse {
}

message RemoveLobbyMessageRequest {
	int32 MessageId = 1;
	string DeletedByUserId = 2;
}

message RemoveLobbyMessageResponse {
}
