syntax = "proto3";

import "google/protobuf/timestamp.proto";

package Throneteki.WebService;

enum CardType {
    Draw = 0;
    Plot = 1;
    Banner = 2;
}

message BlockListEntry {
	string UserId = 1;
	string Username = 2;
}

message Faction {
	string Code = 1;
	string Name = 2;
}  

message Card {
	string Code = 1;
    string Type = 2;
    string Name = 3;
    bool Unique = 4;
    Faction Faction = 5;
    bool Loyal = 6;
    int32 Cost = 7;
    int32 Strength = 8;
    string Text = 9;
    string Flavor = 10;
    int32 DeckLimit = 11;
    string Illustrator = 12;
    string PackCode = 13;
    string Label = 14;
    string Icons = 15;
    repeated string Traits = 16;
    int32 Income = 17;
    int32 Claim = 18;
    int32 Reserve = 19;
    int32 Initiative = 20;
    bool Military = 21;
    bool Intrigue = 22;
    bool Power = 23;
    string ImageUrl = 24;
}

message DeckCard {
	int32 Count = 1;
	Card Card = 2;
}

message DeckValidationStatus {
	bool BasicRules = 1;
    bool FaqJoustRules = 2;
    string FaqVersion = 3;
    bool NoUnreleasedCards = 4;
	bool NoBannedCards = 5;
    int32 PlotCount = 6;
    int32 DrawCount = 7;
    repeated string Errors = 8;
}

message Deck {
	int32 Id = 1;
	string Name = 2;
	string Owner = 3;
	Faction Faction = 4;
	repeated Card Agendas = 5;
    repeated DeckCard DrawCards = 6;
	repeated DeckCard PlotCards = 7;
	DeckValidationStatus ValidationStatus = 8;
}

message LobbyMessage {
	int32 Id = 1;
    string Message = 2;
	ThronetekiUser User = 3;
	google.protobuf.Timestamp Time = 4;
    bool Deleted = 5;
	string Deletedby = 6;
}

message Pack {
    int32 Id = 1;
    string Code = 2;
    string Name = 3;
    google.protobuf.Timestamp ReleaseDate = 4;
}

message KeywordSettings {
    bool ChooseOrder = 1;
    bool ChooseCards = 2;
}

message ThronetekiUserSettings {
	map<string, bool> ActionWindows = 1;
	string Background = 2;
	string CardSize = 3;
	bool ChooseCards = 4;
	bool ChooseOrder = 5;
	string CustomBackgroundUrl = 6;
	bool PromptDupes = 7;
	bool TimerAbilities = 8;
	bool TimerEvents = 9;
	int32 WindowTimer = 10;
    KeywordSettings KeywordSettings = 11;
}

message ThronetekiUser {
	string Id = 1;
	string Username = 2;
	string Avatar = 3;
	repeated BlockListEntry BlockList = 4;
	google.protobuf.Timestamp Registered = 5;
	string Role = 6;
	ThronetekiUserSettings Settings = 7;
    repeated string Permissions = 8;
}

message ThronetekiGamePlayer {
    int32 Id = 1;
    string Player = 2;
    int32 DeckId = 3;
    int32 TotalPower = 5;
}

message ThronetekiGame {
    int32 Id = 1;
    string GameId = 2;
    google.protobuf.Timestamp StartedAt = 3;
    repeated ThronetekiGamePlayer Players = 4;
    string Winner = 5;
    string WinReason = 6;
    google.protobuf.Timestamp FinishedAt = 7;
}